# aiogram-renderer

./: .gitignore  FUNDING.yml  README.md  bot_mode.py  configure.py  filters.py  middlewares.py  pyproject.toml  renderer.py  window.py
.github/: FUNDING.yml
aiogram_renderer/: __init__.py  bot_mode.py  callback_data.py  configure.py  enums.py  filters.py  middlewares.py  renderer.py  renderer2.py  window.py
aiogram_renderer/core/: callback_data.py  middlewares.py
aiogram_renderer/core/handlers/: inline_router.py  reply_router.py
aiogram_renderer/example/: main.py  routers.py  windows.py
aiogram_renderer/handlers/: inline_router.py  reply_router.py
aiogram_renderer/types/: bot_mode.py  data.py  enums.py
aiogram_renderer/widgets/: text.py  widget.py
aiogram_renderer/widgets/inline/: __init__.py  button.py  panel.py
aiogram_renderer/widgets/keyboard/inline/: __init__.py  button.py  dynamic.py  panel.py
aiogram_renderer/widgets/media/: __init__.py  bytes.py  group.py  media.py  path.py
aiogram_renderer/widgets/reply/: __init__.py  button.py  panel.py
aiogram_renderer/widgets/text/: __init__.py  area.py  progress.py  text.py
aiogram_renderer/windows/: base.py  window.py
example/: main.py  routers.py  states.py  windows.py
handlers/: inline.py  inline_router.py  reply.py  reply_router.py
old/: renderer2.py
widgets/: text.py  widget.py
widgets/keyboard/inline/: button.py  group.py  panel.py
widgets/keyboard/reply/: button.py  group.py  panel.py
widgets/media/: group.py
widgets/media/file/: bytes.py  path.py
(+3 files in other folders)
