[project]
name = "aiogram-renderer"
version = "1.3.4"
description = "Библиотека UI-виджетов для Telegram-ботов с использованием aiogram3"
authors = [{ name = "Foldren" }]
readme = "README.md"
requires-python = " >=3.10"
dependencies = [
    "aiogram>=3.18.0",
    "magic-filter>=1.0.12",
    "pydantic>=2.11.5",
    "textcompose>=1.1.1",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Foldren/aiogram-renderer"
Issues = "https://github.com/Foldren/aiogram-renderer/issues"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "redis>=6.2.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["COM812"]

